--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,91 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   font-family: 'Space Grotesk', sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  /* 100% Full-height */
+  width: 0;
+  /* 0 width - change this with JavaScript */
+  position: fixed;
+  /* Stay in place */
+  z-index: 100;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  left: 0;
+  background-color: #FFFFFF;
+  color: #220E5B;
+  /* Black*/
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 60px;
+  /* Place content 60px from the top */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+/* .sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+} */
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  font-size: 50px;
+  color: white;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+main {
+  transition: margin-left 0.5s;
+}
+
+.line {
+  height: 1px;
+}
+
+@media (max-width: 500px) {
+  .sidenav {
+    padding-top: 30px;
+  }
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  /* .sidenav a {
+    font-size: 18px;
+  } */
+}
+
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.burger {
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .line {
+    display: none;
+  }
 }
